# Gerenciador_de_Notas

./: .gitignore  CMakeLists.txt  README.MD
src/: TLSE.c  TLSE.h  helper.c  helper.h  main.c
